[package]
name = "reqwest-websocket"
version = "0.5.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "WebSocket connections with reqwest"
readme = "README.md"
homepage = "https://github.com/jgraef/reqwest-websocket"
repository = "https://github.com/jgraef/reqwest-websocket"
license = "MIT"
keywords = ["websocket", "reqwest", "stream"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::websocket",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
# pin version, see https://github.com/jgraef/reqwest-websocket/pull/33
futures-util = { version = ">=0.3.31", default-features = false, features = ["sink"] }
reqwest-impersonate = { git = "https://github.com/joshrmcdaniel/reqwest-impersonate.git", rev="bf388f9", default-features = false, features = [
  "stream",
  "chrome",
  "boring",
  "blocking",
  "gzip",
  "deflate",
  "json",
  "brotli",
  "rustls-tls",
] }
hyper-boring = { git = "https://github.com/joshrmcdaniel/boring", rev = "2aa86b7"}
boring = { git = "https://github.com/joshrmcdaniel/boring", rev = "2aa86b7"}
tokio-boring = { git = "https://github.com/joshrmcdaniel/boring", rev = "2aa86b7"}
boring-sys = { git = "https://github.com/joshrmcdaniel/boring", rev = "2aa86b7"}
foreign-types = { version = "0.5.0"}

thiserror = "2"
tracing = "0.1"
serde = { version = "1.0", default-features = false, optional = true }
serde_json = { version = "1.0", default-features = false, optional = true, features = ["alloc"] }
bytes = "1.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.29.1", default-features = false, features = ["futures-03-sink"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["WebSocket", "CloseEvent", "ErrorEvent", "Event", "MessageEvent", "BinaryType"] }
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
reqwest-impersonate = { git = "https://github.com/joshrmcdaniel/reqwest-impersonate.git", rev="bf388f9", default-features = false, features = [
  "stream",
  "chrome",
  "boring",
  "blocking",
  "gzip",
  "deflate",
  "json",
  "brotli",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "alloc"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

[patch.crates-io]
h2 = { git = "https://github.com/4JX/h2.git", branch = "imp" }
hyper = { git = "https://github.com/4JX/hyper.git", branch = "v0.14.18-patched" }